--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-opentype": "^1.1.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
