--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@supabase/supabase-js": "^2.24.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
@@ -30,12 +31,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.5.0",
     "@tailwindcss/typography": "^0.5.9",
-    "babel-jest": "^29.5.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.5.0",
-    "ts-jest": "^29.1.0"
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1"
   }
 }
