--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
     "tailwindcss-opentype": "^1.1.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-
     "@jest/globals": "^29.5.0",
     "@tailwindcss/typography": "^0.5.9",
     "babel-jest": "^29.7.0",
