--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@square/web-sdk": "^2.0.1",
     "@supabase/supabase-js": "^2.24.0",
     "@types/jest": "^29.5.5",
     "@types/node": "18.16.3",
@@ -21,10 +22,13 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
     "next": "13.4.0",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-square-web-payments-sdk": "^3.2.1",
+    "square": "^32.0.0",
     "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
     "tailwindcss-opentype": "^1.1.0",
