--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@jest/globals": "^29.5.0",
     "@tailwindcss/typography": "^0.5.9",
     "babel-jest": "^29.7.0",
+    "encoding": "^0.1.13",
     "jest": "^29.5.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1"
