--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "encoding": "^0.1.13",
     "jest": "^29.5.0",
     "react-test-renderer": "^18.2.0",
+    "supabase": "^1.142.2",
     "ts-jest": "^29.1.1"
   }
 }
