--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "encoding": "^0.1.13",
     "jest": "^29.5.0",
+    "jest-mock-axios": "^4.7.3",
     "react-test-renderer": "^18.2.0",
     "supabase": "^1.142.2",
     "ts-jest": "^29.1.1"
