--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "eslint": "8.39.0",
@@ -32,7 +33,8 @@
     "swr": "^2.2.4",
     "tailwindcss": "3.3.2",
     "tailwindcss-opentype": "^1.1.0",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
