--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@square/web-sdk": "^2.0.1",
     "@supabase/supabase-js": "^2.24.0",
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.12",
     "@types/node": "18.16.3",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "18.2.5",
     "@types/react-dom": "18.2.3",
     "@types/uuid": "^9.0.8",
@@ -24,6 +25,7 @@
     "eslint-config-next": "13.4.0",
     "next": "13.4.0",
     "next-transpile-modules": "^10.0.1",
+    "nodemailer": "^6.9.11",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,10 +44,10 @@
     "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "encoding": "^0.1.13",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "jest-mock-axios": "^4.7.3",
     "react-test-renderer": "^18.2.0",
     "supabase": "^1.142.2",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.2"
   }
 }
