--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "encoding": "^0.1.13",
+    "googleapis": "^134.0.0",
     "jest": "^29.7.0",
     "jest-mock-axios": "^4.7.3",
     "react-test-renderer": "^18.2.0",
